functionalize cumulative sum of part b

--- a/advent2019.ipynb
+++ b/advent2019.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
        "4892135"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,20 +78,24 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "def fuel_calc(x):\n",
-    "    return max(0, x // 3 - 2)\n",
+    "def cum_sum_fuel(masses, max_iter=100):\n",
+    "    \"\"\"Given an iterable of masses, apply the fuel calculation formula:\n",
+    "    > max(0, x//3 - 2)\n",
+    "    to each mass, then re-apply the formula to the fuel we just added, \n",
+    "    continueing until all rows yeild 0. \n",
+    "    \n",
+    "    \"\"\"\n",
+    "    df = pd.DataFrame()\n",
+    "    df['mod_mass'] = masses\n",
+    "    \n",
+    "    i = 0\n",
+    "    while (sum(df.iloc[:, -1]) > 0) and (i < max_iter):\n",
+    "        df[f'fuel_{i}'] = df.iloc[:, i].apply(lambda x: max(0, x//3 - 2))\n",
+    "        i += 1\n",
     "\n",
-    "df = pd.DataFrame()\n",
-    "df['mod_mass'] = masses\n",
+    "    return df.sum()[1:].sum()\n",
     "\n",
-    "# stop @ i=100 just in case I accidentally coded an infinite loop\n",
-    "i = 0\n",
-    "while (sum(df.iloc[:,-1]) > 0) and (i < 100):\n",
-    "    df[f'fuel_{i}'] = df.iloc[:, i].apply(fuel_calc)\n",
-    "    i += 1\n",
-    "\n",
-    "total_fuel = df.sum()[1:].sum()\n",
-    "total_fuel"
+    "cum_sum_fuel(masses)"
    ]
   },
   {
@@ -99,7 +103,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Day 2\n"
+   ]
   }
  ],
  "metadata": {
