--- a/advent2019.ipynb
+++ b/advent2019.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -164,26 +164,32 @@
    "source": [
     "with open('./data/2a.txt', 'r') as f:\n",
     "    for line in f:\n",
-    "        intcode = [int(x) for x in line.split(',')]\n",
+    "        raw_intcode = [int(x) for x in line.split(',')]\n",
     "\n",
-    "def turn_back_time(intcode=intcode):\n",
+    "def turn_back_time(noun=None, verb=None, intcode=None):\n",
     "    \"\"\"Once you have a working computer, the first step is to restore the gravity \n",
     "    assist program (your puzzle input) to the \"1202 program alarm\" state it had \n",
     "    just before the last computer caught fire. To do this, before running the \n",
     "    program, replace position 1 with the value 12 and replace position 2 with \n",
-    "    the value 2.\"\"\"\n",
-    "    intcode[1] = 12\n",
-    "    intcode[2] = 2\n",
+    "    the value 2.\n",
+    "    \n",
+    "    the language [noun, verb] are used in part b\"\"\"\n",
+    "    if intcode is None:\n",
+    "        intcode = raw_intcode.copy()\n",
+    "    if noun is not None:\n",
+    "        intcode[1] = noun\n",
+    "    if verb is not None:\n",
+    "        intcode[2] = verb\n",
     "    return intcode\n",
     "\n",
-    "intcode = turn_back_time()\n",
+    "intcode = turn_back_time(12, 2)\n",
     "\n",
     "print(intcode)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +198,7 @@
        "2692315"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,20 +219,70 @@
     "    if x == 2:\n",
     "        intcode[c] = intcode[a] * intcode[b]\n",
     "    if x == 99:\n",
-    "        halt=True\n",
+    "        halt = True\n",
     "    return intcode, halt\n",
     "\n",
     "\n",
     "def process_intcode(intcode, jump=4):\n",
-    "    \"\"\"iterate through intcode, applying single_code() to each block of width=jump\"\"\"\n",
+    "    \"\"\"iterate through intcode, applying single_code() to each block of width=jump\n",
+    "    Immediately stop if we see code '99' as the first number in a block\n",
+    "    \"\"\"\n",
     "    for i in range(0, len(intcode), jump):\n",
     "        intcode, halt = single_code(i, intcode)\n",
     "        if halt:\n",
     "            break\n",
-    "    return intcode\n",
+    "    return intcode[0]\n",
     "\n",
     "\n",
-    "process_intcode(intcode)[0]"
+    "process_intcode(intcode)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Day 2: part two\n",
+    "\"Good, the new computer seems to be working correctly! Keep it nearby during this mission - you'll probably use it again. Real Intcode computers support many more features than your new one, but we'll let you know what they are as you need them.\"\n",
+    "\n",
+    "\"However, your current priority should be to complete your gravity assist around the Moon. For this mission to succeed, we should settle on some terminology for the parts you've already built.\"\n",
+    "\n",
+    "Intcode programs are given as a list of integers; these values are used as the initial state for the computer's memory. When you run an Intcode program, make sure to start by initializing memory to the program's values. A position in memory is called an address (for example, the first value in memory is at \"address 0\").\n",
+    "\n",
+    "Opcodes (like 1, 2, or 99) mark the beginning of an instruction. The values used immediately after an opcode, if any, are called the instruction's parameters. For example, in the instruction 1,2,3,4, 1 is the opcode; 2, 3, and 4 are the parameters. The instruction 99 contains only an opcode and has no parameters.\n",
+    "\n",
+    "The address of the current instruction is called the instruction pointer; it starts at 0. After an instruction finishes, the instruction pointer increases by the number of values in the instruction; until you add more instructions to the computer, this is always 4 (1 opcode + 3 parameters) for the add and multiply instructions. (The halt instruction would increase the instruction pointer by 1, but it halts the program instead.)\n",
+    "\n",
+    "\"With terminology out of the way, we're ready to proceed. To complete the gravity assist, you need to determine what pair of inputs produces the output 19690720.\"\n",
+    "\n",
+    "The inputs should still be provided to the program by replacing the values at addresses 1 and 2, just like before. In this program, the value placed in address 1 is called the noun, and the value placed in address 2 is called the verb. Each of the two input values will be between 0 and 99, inclusive.\n",
+    "\n",
+    "Once the program has halted, its output is available at address 0, also just like before. Each time you try a pair of inputs, make sure you first reset the computer's memory to the values in the program (your puzzle input) - in other words, don't reuse memory from a previous attempt.\n",
+    "\n",
+    "Find the input noun and verb that cause the program to produce the output 19690720. What is 100 * noun + verb? (For example, if noun=12 and verb=2, the answer would be 1202.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Match found using inputs: 95, 7\n",
+      "Final Answer is: 9507\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(99):\n",
+    "    for j in range(99):\n",
+    "        intcode = turn_back_time(i, j)\n",
+    "        if process_intcode(intcode) == 19690720:\n",
+    "            print(f'Match found using inputs: {i}, {j}')\n",
+    "            print(f'Final Answer is: {100*i + j}')\n",
+    "            break"
    ]
   },
   {
