clean up variable assign in single_code()

--- a/advent2019.ipynb
+++ b/advent2019.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
        "2692315"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,12 +213,12 @@
     "    \n",
     "    return the tuple: (intcode, halt_status)\n",
     "    \"\"\"\n",
-    "    x, a, b, c = intcode[i], intcode[i+1], intcode[i+2], intcode[i+3]\n",
+    "    x, a, b, c = intcode[i: i+4]\n",
     "    if x == 1:\n",
     "        intcode[c] = intcode[a] + intcode[b]\n",
-    "    if x == 2:\n",
+    "    elif x == 2:\n",
     "        intcode[c] = intcode[a] * intcode[b]\n",
-    "    if x == 99:\n",
+    "    elif x == 99:\n",
     "        halt = True\n",
     "    return intcode, halt\n",
     "\n",
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -276,10 +276,12 @@
     }
    ],
    "source": [
+    "target = 19690720\n",
+    "\n",
     "for i in range(99):\n",
     "    for j in range(99):\n",
     "        intcode = turn_back_time(i, j)\n",
-    "        if process_intcode(intcode) == 19690720:\n",
+    "        if process_intcode(intcode) == target:\n",
     "            print(f'Match found using inputs: {i}, {j}')\n",
     "            print(f'Final Answer is: {100*i + j}')\n",
     "            break"
