solve 3a (and data upload)

--- a/advent2019.ipynb
+++ b/advent2019.ipynb
@@ -288,6 +288,101 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# --- Day 3: Crossed Wires ---\n",
+    "The gravity assist was successful, and you're well on your way to the Venus refuelling station. During the rush back on Earth, the fuel management system wasn't completely installed, so that's next on the priority list.\n",
+    "\n",
+    "Opening the front panel reveals a jumble of wires. Specifically, two wires are connected to a central port and extend outward on a grid. You trace the path each wire takes as it leaves the central port, one wire per line of text (your puzzle input).\n",
+    "\n",
+    "The wires twist and turn, but the two wires occasionally cross paths. To fix the circuit, you need to find the intersection point closest to the central port. Because the wires are on a grid, use the Manhattan distance for this measurement. While the wires do technically cross right at the central port where they both start, this point does not count, nor does a wire count as crossing with itself."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wire_paths = []\n",
+    "with open('./data/3a.txt', 'r') as f:\n",
+    "    for line in f:\n",
+    "        wire_paths.append(line.strip().split(','))\n",
+    "\n",
+    "a_paths, b_paths = wire_paths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test0 = '''R8,U5,L5,D3\n",
+    "# U7,R6,D4,L4'''\n",
+    "\n",
+    "# test1 = \"\"\"R75,D30,R83,U83,L12,D49,R71,U7,L72\n",
+    "# U62,R66,U55,R34,D71,R55,D58,R83\"\"\"\n",
+    "\n",
+    "# test2 = \"\"\"R98,U47,R26,D63,R33,U87,L62,D20,R33,U53,R51\n",
+    "# U98,R91,D20,R16,D67,R40,U7,R15,U6,R7\"\"\"\n",
+    "\n",
+    "# test = [x.split(',') for x in test1.split('\\n')]\n",
+    "# a_paths, b_paths = test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "248"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def all_seen(paths):\n",
+    "    a = [0, 0]\n",
+    "    seen = set()\n",
+    "    \n",
+    "    for path in paths:\n",
+    "        a_start = a[:]    \n",
+    "        _dir, delta = path[0], int(path[1:])\n",
+    "        if _dir == 'R':\n",
+    "            while a[0] < a_start[0] + delta:\n",
+    "                a = (a[0] + 1, a[1])\n",
+    "                seen.add(a)\n",
+    "        if _dir == 'L':\n",
+    "            while a[0] > a_start[0] - delta:\n",
+    "                a = (a[0] - 1, a[1])\n",
+    "                seen.add(a)\n",
+    "        if _dir == 'U':\n",
+    "            while a[1] < a_start[1] + delta:\n",
+    "                a = (a[0], a[1] + 1)\n",
+    "                seen.add(a)\n",
+    "        if _dir == 'D':\n",
+    "            while a[1] > a_start[1] - delta:\n",
+    "                a = (a[0], a[1] - 1)\n",
+    "                seen.add(a)\n",
+    "    return seen\n",
+    "\n",
+    "\n",
+    "def shared_seen(a_paths=a_paths, b_paths=b_paths):\n",
+    "    return list(all_seen(a_paths).intersection(all_seen(b_paths)))\n",
+    "\n",
+    "\n",
+    "sum(min(shared_seen(), key=lambda x: abs(x[0])+abs(x[1])))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
