solve 3b (messy but it works)

--- a/advent2019.ipynb
+++ b/advent2019.ipynb
@@ -319,22 +319,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# test0 = '''R8,U5,L5,D3\n",
-    "# U7,R6,D4,L4'''\n",
+    "test0 = '''R8,U5,L5,D3\n",
+    "U7,R6,D4,L4'''\n",
     "\n",
-    "# test1 = \"\"\"R75,D30,R83,U83,L12,D49,R71,U7,L72\n",
-    "# U62,R66,U55,R34,D71,R55,D58,R83\"\"\"\n",
+    "test1 = \"\"\"R75,D30,R83,U83,L12,D49,R71,U7,L72\n",
+    "U62,R66,U55,R34,D71,R55,D58,R83\"\"\"\n",
     "\n",
-    "# test2 = \"\"\"R98,U47,R26,D63,R33,U87,L62,D20,R33,U53,R51\n",
-    "# U98,R91,D20,R16,D67,R40,U7,R15,U6,R7\"\"\"\n",
-    "\n",
-    "# test = [x.split(',') for x in test1.split('\\n')]\n",
-    "# a_paths, b_paths = test"
+    "test2 = \"\"\"R98,U47,R26,D63,R33,U87,L62,D20,R33,U53,R51\n",
+    "U98,R91,D20,R16,D67,R40,U7,R15,U6,R7\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +340,7 @@
        "248"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +348,18 @@
    "source": [
     "def all_seen(paths):\n",
     "    a = [0, 0]\n",
+    "    steps = 0\n",
+    "    total_steps = {}\n",
     "    seen = set()\n",
+    "    \n",
+    "    \n",
+    "    def update_dict(total_steps, a, steps):\n",
+    "        if str(a) not in total_steps:\n",
+    "            total_steps[a] = steps\n",
+    "        else:\n",
+    "            total_steps[a] = min(total_steps[a], steps)\n",
+    "        return total_steps\n",
+    "    \n",
     "    \n",
     "    for path in paths:\n",
     "        a_start = a[:]    \n",
@@ -359,27 +367,130 @@
     "        if _dir == 'R':\n",
     "            while a[0] < a_start[0] + delta:\n",
     "                a = (a[0] + 1, a[1])\n",
-    "                seen.add(a)\n",
+    "                steps += 1\n",
+    "                total_steps = update_dict(total_steps, a, steps)\n",
+    "                #seen.add(a)\n",
     "        if _dir == 'L':\n",
     "            while a[0] > a_start[0] - delta:\n",
     "                a = (a[0] - 1, a[1])\n",
-    "                seen.add(a)\n",
+    "                steps += 1\n",
+    "                total_steps = update_dict(total_steps, a, steps)\n",
+    "                #seen.add(a)\n",
     "        if _dir == 'U':\n",
     "            while a[1] < a_start[1] + delta:\n",
     "                a = (a[0], a[1] + 1)\n",
-    "                seen.add(a)\n",
+    "                steps += 1\n",
+    "                total_steps = update_dict(total_steps, a, steps)\n",
+    "                #seen.add(a)\n",
     "        if _dir == 'D':\n",
     "            while a[1] > a_start[1] - delta:\n",
     "                a = (a[0], a[1] - 1)\n",
-    "                seen.add(a)\n",
-    "    return seen\n",
+    "                steps += 1\n",
+    "                total_steps = update_dict(total_steps, a, steps)\n",
+    "                #seen.add(a)\n",
+    "    return total_steps\n",
     "\n",
     "\n",
     "def shared_seen(a_paths=a_paths, b_paths=b_paths):\n",
-    "    return list(all_seen(a_paths).intersection(all_seen(b_paths)))\n",
+    "    a_set = set(all_seen(a_paths).keys())\n",
+    "    b_set = set(all_seen(b_paths).keys())\n",
+    "    return list(a_set.intersection(b_set))\n",
     "\n",
     "\n",
-    "sum(min(shared_seen(), key=lambda x: abs(x[0])+abs(x[1])))"
+    "def manhattan_min(shared):\n",
+    "    shared = [[int(x) for x in point] for point in shared]\n",
+    "    return sum(min(shared, key=lambda x: abs(x[0]) + abs(x[1])))\n",
+    "\n",
+    "\n",
+    "for test, ans, ans_b in zip([test0, test1, test2], [6, 159, 135], [30, 610, 410]):\n",
+    "    a_test, b_test = [x.split(',') for x in test.split('\\n')]\n",
+    "    manhat_min = manhattan_min(shared_seen(a_test, b_test))\n",
+    "    assert manhat_min == ans, f'part A got {manhat_min}, should have been {ans}'\n",
+    "\n",
+    "manhattan_min(shared_seen(a_paths, b_paths))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(-713, 1797),\n",
+       " (3261, 2110),\n",
+       " (3082, 4016),\n",
+       " (367, 0),\n",
+       " (2876, 3553),\n",
+       " (1001, -111),\n",
+       " (853, 2630),\n",
+       " (6126, 3956),\n",
+       " (2876, 3495),\n",
+       " (6126, 3779),\n",
+       " (3834, 3769),\n",
+       " (265, 2432),\n",
+       " (3035, 3553),\n",
+       " (5523, 3501),\n",
+       " (3369, 6356),\n",
+       " (3834, 3958),\n",
+       " (3261, 2123),\n",
+       " (3924, 3709),\n",
+       " (3367, 2291),\n",
+       " (2115, 3637),\n",
+       " (3410, 4282),\n",
+       " (-165, 2245),\n",
+       " (1611, 3637),\n",
+       " (2905, 3074),\n",
+       " (4593, 3280),\n",
+       " (-1722, 506),\n",
+       " (3369, 6214),\n",
+       " (2061, 3637),\n",
+       " (5960, 3972),\n",
+       " (3745, 4282),\n",
+       " (-143, 2432),\n",
+       " (5052, 3341),\n",
+       " (-696, 1873),\n",
+       " (3924, 3738),\n",
+       " (3476, 2071),\n",
+       " (-3, 2432),\n",
+       " (-1722, 226),\n",
+       " (3367, 2602),\n",
+       " (3834, 3882),\n",
+       " (248, 0),\n",
+       " (3286, 2270)]"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shared = shared_seen()\n",
+    "shared"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28580"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a, b = all_seen(a_paths), all_seen(b_paths)\n",
+    "\n",
+    "min([a[point] + b[point] for point in shared])  "
    ]
   },
   {
