add instructions for 3b, clean up "all_seen()"

--- a/advent2019.ipynb
+++ b/advent2019.ipynb
@@ -296,12 +296,14 @@
     "\n",
     "Opening the front panel reveals a jumble of wires. Specifically, two wires are connected to a central port and extend outward on a grid. You trace the path each wire takes as it leaves the central port, one wire per line of text (your puzzle input).\n",
     "\n",
-    "The wires twist and turn, but the two wires occasionally cross paths. To fix the circuit, you need to find the intersection point closest to the central port. Because the wires are on a grid, use the Manhattan distance for this measurement. While the wires do technically cross right at the central port where they both start, this point does not count, nor does a wire count as crossing with itself."
+    "The wires twist and turn, but the two wires occasionally cross paths. To fix the circuit, you need to find the intersection point closest to the central port. Because the wires are on a grid, use the Manhattan distance for this measurement. While the wires do technically cross right at the central port where they both start, this point does not count, nor does a wire count as crossing with itself.\n",
+    "\n",
+    "What is the Manhattan distance from the central port to the closest intersection?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -340,25 +342,29 @@
        "248"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def all_seen(paths):\n",
-    "    a = [0, 0]\n",
+    "    \"\"\"Given a list of paths, create a dictionary of every point visited,\n",
+    "    and the fewest steps taken to get there.\n",
+    "    {(x, y): steps_taken}\n",
+    "    \"\"\"\n",
+    "    a = (0, 0)\n",
     "    steps = 0\n",
     "    total_steps = {}\n",
     "    seen = set()\n",
     "    \n",
     "    \n",
     "    def update_dict(total_steps, a, steps):\n",
-    "        if str(a) not in total_steps:\n",
+    "        steps += 1\n",
+    "        if a not in total_steps:\n",
     "            total_steps[a] = steps\n",
-    "        else:\n",
-    "            total_steps[a] = min(total_steps[a], steps)\n",
-    "        return total_steps\n",
+    "        # `else` not needed,this can only have more steps than the initial assignment     \n",
+    "        return steps, total_steps\n",
     "    \n",
     "    \n",
     "    for path in paths:\n",
@@ -367,33 +373,25 @@
     "        if _dir == 'R':\n",
     "            while a[0] < a_start[0] + delta:\n",
     "                a = (a[0] + 1, a[1])\n",
-    "                steps += 1\n",
-    "                total_steps = update_dict(total_steps, a, steps)\n",
-    "                #seen.add(a)\n",
+    "                steps, total_steps = update_dict(total_steps, a, steps)\n",
     "        if _dir == 'L':\n",
     "            while a[0] > a_start[0] - delta:\n",
     "                a = (a[0] - 1, a[1])\n",
-    "                steps += 1\n",
-    "                total_steps = update_dict(total_steps, a, steps)\n",
-    "                #seen.add(a)\n",
+    "                steps, total_steps = update_dict(total_steps, a, steps)\n",
     "        if _dir == 'U':\n",
     "            while a[1] < a_start[1] + delta:\n",
     "                a = (a[0], a[1] + 1)\n",
-    "                steps += 1\n",
-    "                total_steps = update_dict(total_steps, a, steps)\n",
-    "                #seen.add(a)\n",
+    "                steps, total_steps = update_dict(total_steps, a, steps)\n",
     "        if _dir == 'D':\n",
     "            while a[1] > a_start[1] - delta:\n",
     "                a = (a[0], a[1] - 1)\n",
-    "                steps += 1\n",
-    "                total_steps = update_dict(total_steps, a, steps)\n",
-    "                #seen.add(a)\n",
+    "                steps, total_steps = update_dict(total_steps, a, steps)\n",
     "    return total_steps\n",
     "\n",
     "\n",
     "def shared_seen(a_paths=a_paths, b_paths=b_paths):\n",
-    "    a_set = set(all_seen(a_paths).keys())\n",
-    "    b_set = set(all_seen(b_paths).keys())\n",
+    "    a_set = set(all_seen(a_paths))\n",
+    "    b_set = set(all_seen(b_paths))\n",
     "    return list(a_set.intersection(b_set))\n",
     "\n",
     "\n",
@@ -407,98 +405,43 @@
     "    manhat_min = manhattan_min(shared_seen(a_test, b_test))\n",
     "    assert manhat_min == ans, f'part A got {manhat_min}, should have been {ans}'\n",
     "\n",
+    "\n",
     "manhattan_min(shared_seen(a_paths, b_paths))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 65,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(-713, 1797),\n",
-       " (3261, 2110),\n",
-       " (3082, 4016),\n",
-       " (367, 0),\n",
-       " (2876, 3553),\n",
-       " (1001, -111),\n",
-       " (853, 2630),\n",
-       " (6126, 3956),\n",
-       " (2876, 3495),\n",
-       " (6126, 3779),\n",
-       " (3834, 3769),\n",
-       " (265, 2432),\n",
-       " (3035, 3553),\n",
-       " (5523, 3501),\n",
-       " (3369, 6356),\n",
-       " (3834, 3958),\n",
-       " (3261, 2123),\n",
-       " (3924, 3709),\n",
-       " (3367, 2291),\n",
-       " (2115, 3637),\n",
-       " (3410, 4282),\n",
-       " (-165, 2245),\n",
-       " (1611, 3637),\n",
-       " (2905, 3074),\n",
-       " (4593, 3280),\n",
-       " (-1722, 506),\n",
-       " (3369, 6214),\n",
-       " (2061, 3637),\n",
-       " (5960, 3972),\n",
-       " (3745, 4282),\n",
-       " (-143, 2432),\n",
-       " (5052, 3341),\n",
-       " (-696, 1873),\n",
-       " (3924, 3738),\n",
-       " (3476, 2071),\n",
-       " (-3, 2432),\n",
-       " (-1722, 226),\n",
-       " (3367, 2602),\n",
-       " (3834, 3882),\n",
-       " (248, 0),\n",
-       " (3286, 2270)]"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "shared = shared_seen()\n",
-    "shared"
+    "### --- Part Two ---\n",
+    "It turns out that this circuit is very timing-sensitive; you actually need to minimize the signal delay.\n",
+    "\n",
+    "To do this, calculate the number of steps each wire takes to reach each intersection; choose the intersection where the sum of both wires' steps is lowest. If a wire visits a position on the grid multiple times, use the steps value from the first time it visits that position when calculating the total value of a specific intersection.\n",
+    "\n",
+    "The number of steps a wire takes is the total number of grid squares the wire has entered to get to that location, including the intersection being considered.\n",
+    "\n",
+    "What is the fewest combined steps the wires must take to reach an intersection?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "28580"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The fewest combined steps to get to a wire crossing is 28580.\n"
+     ]
     }
    ],
    "source": [
     "a, b = all_seen(a_paths), all_seen(b_paths)\n",
     "\n",
-    "min([a[point] + b[point] for point in shared])  "
+    "fewest_steps = min([a[point] + b[point] for point in shared_seen()])  \n",
+    "print(f'The fewest combined steps to get to a wire crossing is {fewest_steps}.')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
