remove unused from 3b assert section

--- a/advent2019.ipynb
+++ b/advent2019.ipynb
@@ -400,7 +400,7 @@
     "    return sum(min(shared, key=lambda x: abs(x[0]) + abs(x[1])))\n",
     "\n",
     "\n",
-    "for test, ans, ans_b in zip([test0, test1, test2], [6, 159, 135], [30, 610, 410]):\n",
+    "for test, ans in zip([test0, test1, test2], [6, 159, 135]):\n",
     "    a_test, b_test = [x.split(',') for x in test.split('\\n')]\n",
     "    manhat_min = manhattan_min(shared_seen(a_test, b_test))\n",
     "    assert manhat_min == ans, f'part A got {manhat_min}, should have been {ans}'\n",
