restructure file organization: individual days are now inside /notebooks as separate files

--- a/notebooks/day2.ipynb
+++ b/notebooks/day2.ipynb
@@ -4,103 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Day 1:\n",
-    "Fuel required to launch a given module is based on its mass. Specifically, to find the fuel required for a module, take its mass, divide by three, round down, and subtract 2.\n",
-    "\n",
-    "For example:\n",
-    "\n",
-    "* For a mass of 12, divide by 3 and round down to get 4, then subtract 2 to get 2.\n",
-    "* For a mass of 14, dividing by 3 and rounding down still yields 4, so the fuel required is also 2.\n",
-    "* For a mass of 1969, the fuel required is 654.\n",
-    "* For a mass of 100756, the fuel required is 33583.\n",
-    "The Fuel Counter-Upper needs to know the total fuel requirement. To find it, individually calculate the fuel needed for the mass of each module (your puzzle input), then add together all the fuel values.\n",
-    "\n",
-    "What is the sum of the fuel requirements for all of the modules on your spacecraft?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3263320"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "with open('./data/1a.txt', 'rb') as f:\n",
-    "    masses = [int(line) for line in f]\n",
-    "\n",
-    "fuels = [x // 3 - 2 for x in masses]\n",
-    "sum(fuels)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Day 1 : part two\n",
-    "During the second Go / No Go poll, the Elf in charge of the Rocket Equation Double-Checker stops the launch sequence. Apparently, you forgot to include additional fuel for the fuel you just added.\n",
-    "\n",
-    "Fuel itself requires fuel just like a module - take its mass, divide by three, round down, and subtract 2. However, that fuel also requires fuel, and that fuel requires fuel, and so on. Any mass that would require negative fuel should instead be treated as if it requires zero fuel; the remaining mass, if any, is instead handled by wishing really hard, which has no mass and is outside the scope of this calculation.\n",
-    "\n",
-    "So, for each module mass, calculate its fuel and add it to the total. Then, treat the fuel amount you just calculated as the input mass and repeat the process, continuing until a fuel requirement is zero or negative. For example:\n",
-    "\n",
-    "A module of mass 14 requires 2 fuel. This fuel requires no further fuel (2 divided by 3 and rounded down is 0, which would call for a negative fuel), so the total fuel required is still just 2.\n",
-    "At first, a module of mass 1969 requires 654 fuel. Then, this fuel requires 216 more fuel (654 / 3 - 2). 216 then requires 70 more fuel, which requires 21 fuel, which requires 5 fuel, which requires no further fuel. So, the total fuel required for a module of mass 1969 is 654 + 216 + 70 + 21 + 5 = 966.\n",
-    "The fuel required by a module of mass 100756 and its fuel is: 33583 + 11192 + 3728 + 1240 + 411 + 135 + 43 + 12 + 2 = 50346.\n",
-    "What is the sum of the fuel requirements for all of the modules on your spacecraft when also taking into account the mass of the added fuel? (Calculate the fuel requirements for each module separately, then add them all up at the end.)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4892135"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "def cum_sum_fuel(masses, max_iter=100):\n",
-    "    \"\"\"Given an iterable of masses, apply the fuel calculation formula:\n",
-    "    > max(0, x//3 - 2)\n",
-    "    to each mass, then re-apply the formula to the fuel we just added, \n",
-    "    continueing until all rows yield 0 (or checking `max_iter` times).\n",
-    "    \"\"\"\n",
-    "    df = pd.DataFrame()\n",
-    "    df['mod_mass'] = masses\n",
-    "    \n",
-    "    i = 0\n",
-    "    while (sum(df.iloc[:, -1]) > 0) and (i < max_iter):\n",
-    "        df[f'fuel_{i}'] = df.iloc[:, i].apply(lambda x: max(0, x//3 - 2))\n",
-    "        i += 1\n",
-    "\n",
-    "    return df.sum()[1:].sum()\n",
-    "\n",
-    "cum_sum_fuel(masses)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# --- Day 2: 1202 Program Alarm ---\n",
     "On the way to your gravity assist around the Moon, your ship computer beeps angrily about a \"1202 program alarm\". On the radio, an Elf is already explaining how to handle the situation: \"Don't worry, that's perfectly norma--\" The ship computer bursts into flames.\n",
     "\n",
@@ -150,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +65,7 @@
     }
    ],
    "source": [
-    "with open('./data/2a.txt', 'r') as f:\n",
+    "with open('../data/2a.txt', 'r') as f:\n",
     "    for line in f:\n",
     "        raw_intcode = [int(x) for x in line.split(',')]\n",
     "\n",
@@ -189,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +101,7 @@
        "2692315"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -288,160 +191,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# --- Day 3: Crossed Wires ---\n",
-    "The gravity assist was successful, and you're well on your way to the Venus refuelling station. During the rush back on Earth, the fuel management system wasn't completely installed, so that's next on the priority list.\n",
-    "\n",
-    "Opening the front panel reveals a jumble of wires. Specifically, two wires are connected to a central port and extend outward on a grid. You trace the path each wire takes as it leaves the central port, one wire per line of text (your puzzle input).\n",
-    "\n",
-    "The wires twist and turn, but the two wires occasionally cross paths. To fix the circuit, you need to find the intersection point closest to the central port. Because the wires are on a grid, use the Manhattan distance for this measurement. While the wires do technically cross right at the central port where they both start, this point does not count, nor does a wire count as crossing with itself.\n",
-    "\n",
-    "What is the Manhattan distance from the central port to the closest intersection?"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "wire_paths = []\n",
-    "with open('./data/3a.txt', 'r') as f:\n",
-    "    for line in f:\n",
-    "        wire_paths.append(line.strip().split(','))\n",
-    "\n",
-    "a_paths, b_paths = wire_paths"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test0 = '''R8,U5,L5,D3\n",
-    "U7,R6,D4,L4'''\n",
-    "\n",
-    "test1 = \"\"\"R75,D30,R83,U83,L12,D49,R71,U7,L72\n",
-    "U62,R66,U55,R34,D71,R55,D58,R83\"\"\"\n",
-    "\n",
-    "test2 = \"\"\"R98,U47,R26,D63,R33,U87,L62,D20,R33,U53,R51\n",
-    "U98,R91,D20,R16,D67,R40,U7,R15,U6,R7\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "248"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def all_seen(paths):\n",
-    "    \"\"\"Given a list of paths, create a dictionary of every point visited,\n",
-    "    and the fewest steps taken to get there.\n",
-    "    {(x, y): steps_taken}\n",
-    "    \"\"\"\n",
-    "    a = (0, 0)\n",
-    "    steps = 0\n",
-    "    total_steps = {}\n",
-    "    seen = set()\n",
-    "    \n",
-    "    \n",
-    "    def update_dict(total_steps, a, steps):\n",
-    "        steps += 1\n",
-    "        if a not in total_steps:\n",
-    "            total_steps[a] = steps\n",
-    "        # `else` not needed,this can only have more steps than the initial assignment     \n",
-    "        return steps, total_steps\n",
-    "    \n",
-    "    \n",
-    "    for path in paths:\n",
-    "        a_start = a[:]    \n",
-    "        _dir, delta = path[0], int(path[1:])\n",
-    "        if _dir == 'R':\n",
-    "            while a[0] < a_start[0] + delta:\n",
-    "                a = (a[0] + 1, a[1])\n",
-    "                steps, total_steps = update_dict(total_steps, a, steps)\n",
-    "        if _dir == 'L':\n",
-    "            while a[0] > a_start[0] - delta:\n",
-    "                a = (a[0] - 1, a[1])\n",
-    "                steps, total_steps = update_dict(total_steps, a, steps)\n",
-    "        if _dir == 'U':\n",
-    "            while a[1] < a_start[1] + delta:\n",
-    "                a = (a[0], a[1] + 1)\n",
-    "                steps, total_steps = update_dict(total_steps, a, steps)\n",
-    "        if _dir == 'D':\n",
-    "            while a[1] > a_start[1] - delta:\n",
-    "                a = (a[0], a[1] - 1)\n",
-    "                steps, total_steps = update_dict(total_steps, a, steps)\n",
-    "    return total_steps\n",
-    "\n",
-    "\n",
-    "def shared_seen(a_paths=a_paths, b_paths=b_paths):\n",
-    "    a_set = set(all_seen(a_paths))\n",
-    "    b_set = set(all_seen(b_paths))\n",
-    "    return list(a_set.intersection(b_set))\n",
-    "\n",
-    "\n",
-    "def manhattan_min(shared):\n",
-    "    shared = [[int(x) for x in point] for point in shared]\n",
-    "    return sum(min(shared, key=lambda x: abs(x[0]) + abs(x[1])))\n",
-    "\n",
-    "\n",
-    "for test, ans in zip([test0, test1, test2], [6, 159, 135]):\n",
-    "    a_test, b_test = [x.split(',') for x in test.split('\\n')]\n",
-    "    manhat_min = manhattan_min(shared_seen(a_test, b_test))\n",
-    "    assert manhat_min == ans, f'part A got {manhat_min}, should have been {ans}'\n",
-    "\n",
-    "\n",
-    "manhattan_min(shared_seen(a_paths, b_paths))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### --- Part Two ---\n",
-    "It turns out that this circuit is very timing-sensitive; you actually need to minimize the signal delay.\n",
-    "\n",
-    "To do this, calculate the number of steps each wire takes to reach each intersection; choose the intersection where the sum of both wires' steps is lowest. If a wire visits a position on the grid multiple times, use the steps value from the first time it visits that position when calculating the total value of a specific intersection.\n",
-    "\n",
-    "The number of steps a wire takes is the total number of grid squares the wire has entered to get to that location, including the intersection being considered.\n",
-    "\n",
-    "What is the fewest combined steps the wires must take to reach an intersection?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The fewest combined steps to get to a wire crossing is 28580.\n"
-     ]
-    }
-   ],
-   "source": [
-    "a, b = all_seen(a_paths), all_seen(b_paths)\n",
-    "\n",
-    "fewest_steps = min([a[point] + b[point] for point in shared_seen()])  \n",
-    "print(f'The fewest combined steps to get to a wire crossing is {fewest_steps}.')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
